Agregando validaciones a formulario Actividad y recursos

--- a/siscop-caritas-web/src/main/webapp/WEB-INF/template.xhtml
+++ b/siscop-caritas-web/src/main/webapp/WEB-INF/template.xhtml
@@ -16,6 +16,7 @@
         
         <h:outputScript name="js/nanoscroller.js" library="omega-layout" />
         <h:outputScript name="js/layout.js" library="omega-layout" />
+        <h:outputScript name="js/calendar_es.js" library="omega-layout" />
 
         <ui:insert name="head"/>
     </h:head>
